# jaek

./: .gitignore  Makefile  README.md  ack.lexed  build.gradle  build.gradle.kts  cup  etac  irtest.eta  irtest.ir  settings.gradle  settings.gradle.kts
.github/workflows/: eth.yml
.run/: Run Custom Tests.run.xml
benchmarks/: benchmarkcf.eta  benchmarkdce1.eta  benchmarkdce2.eta  benchmarkdce3.eta  ccpbench.eta  ccpbench2.eta  ccpbench3.eta  constantfolding1.eta  constantfolding2.eta  copypropii.eta  copypropiii.eta  regalloc1.eta  regalloc2.eta  regalloc3.eta
production/: build.gradle  etac  etac-build
runtime/: Makefile  README.txt  etafilt  linketa.sh  linkqt.sh  platform-flags.sh  update
runtime/demangle/: demangle.c
runtime/examples/: arr  arr.c  curses.eta  fact  fact.c
runtime/gc-7.6.4/: Makefile  allchblk.lo  blacklst.lo  checksums.lo  config.status  cordtest  dbg_mlc.lo  disclaim_bench  disclaim_test  dyn_load.lo  finalize.lo  fnlz_mlc.lo  gc_dlopen.lo  gcj_mlc.lo  gctest  headers.lo  hugetest  initsecondarythread_test  leaktest  libcord.la  libgc.la  libstaticrootslib2_test.la  libstaticrootslib_test.la  libtool  mach_dep.lo  mallocx.lo  mark.lo  mark_rts.lo  middletest  new_hblk.lo  obj_map.lo  os_dep.lo  pcr_interface.lo  pthread_start.lo  pthread_stop_world.lo  pthread_support.lo  ptr_chck.lo  real_malloc.lo  realloc_test  reclaim.lo  (+9 more)
runtime/include/: conv.eti  curses.eti  io.eti  sqrt.ri
runtime/libQtRho/: CMakeLists.txt  ChangeLog.txt  bindgen.txt  bindqt.cpp  bindqt.cpp.in  bindqt.h  bindqt.h.in  gcpin.cpp  gcpin.h  moc-wrap.sh  moc_xiqslot.cxx  qmake-wrap.sh  qt.idl  qt.ri  qt.ri.in  xiobj.cpp  xiobj.h  xiqobjectholder.cpp  xiqobjectholder.h  xiqproxywidgets.cpp  xiqproxywidgets.h  xiqslot.cpp  xiqslot.h  xiqwrapperfactory.cpp  xiqwrapperfactory.h
runtime/libQtRho/generator/: ASCIICType.h  bindgen.cpp  bindgen.h  codeprinter.cpp  codeprinter.h  driver.cpp  filetemplate.h  lexer.cpp  lexer.h  parser.cpp  parser.h  types.cpp  types.h
runtime/libQtRho/tests/: animate-fancy.cpp  animate.cpp  layouts.cpp  onewidget.cpp  widgetevents.cpp
runtime/libeta/: curses.c  libeta.c  libeta.h
runtime/ncurses-6.3/: Makefile  config.status  edit_man.sh
src/lexer/: Lexer.flex
src/main/: Main.kt
src/resources/: ack.eta  example1.eta  hellojello.eta  primes.eta  small.eta
src/tests/: charstringedgecase.eta  charstringedgecase.lexedsol  comments.eta  comments.lexedsol  emotetest.eta  emotetest.lexedsol  errorScript  ethScript  ethScriptReal  invalidcharacter2.eta  (+32 more)
(+934 files in other folders)
